# Computer-Vision---Master-Degree

lab 1/ex01/: ex01_leitura_exibicao.cpp  relatorio.md
lab 1/ex02/: ex02_escala_cinza.cpp  relatorio.md
lab 1/ex03/: ex03_valor_pixel.cpp  relatorio.md
lab 1/ex04/: ex04_negativo.cpp  relatorio.md
lab 1/ex05/: ex05_binarizacao.cpp  relatorio.md
lab 1/ex06/: ex06_quantizacao.cpp  relatorio.md
lab 1/ex07/: ex07_resolucao.cpp  relatorio.md
lab 1/ex08/: ex08_comparacao.cpp  relatorio.md
lab2/: .gitignore  CMakeLists.txt  README.md  run_review_sensitive.bat  run_review_strict.bat
lab2/exes/: run_review_balanced.bat
lab2/projeto/: README.md
lab2/projeto/exes/: run_review_balanced.bat  run_review_sensitive.bat  run_review_strict.bat
lab2/projeto/report_latex/: README.md
lab2/projeto/src/: main.cpp  plate_detector.cpp  plate_detector.hpp
lab2/report_latex/: README.md  main.tex
lab2/src/: config.cpp  config.hpp  io_utils.cpp  io_utils.hpp  review_labels.cpp
